--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </table>
     <p>
      <br>
-        <span style="color:darkblue;font-size:15px;">I lead the <span style="color:darkred;font-weight:bold;">Agile Sensing and Intelligence Group <a href="https://asig-x.github.io/">(ASIG)</a></span> working in the field of autonomous systems and robotics. We constantly look for strong candidates for PhD/postdoc/internship/thesis. Shoot me an email with a brief intro if you are interested, and we will start from this!</span></p>
+        <span style="color:darkblue;font-size:15px;">I lead the <span style="color:darkred;font-weight:bold;">Agile Sensing and Intelligence Group <a href="https://asig-x.github.io/" target="_blank">(ASIG)</a></span> working in the field of autonomous systems and robotics. We constantly look for strong candidates for PhD/postdoc/internship/thesis. Shoot me an email with a brief intro if you are interested, and we will start from this!</span></p>
         
         <span style="color:darkblue;font-size:15px;">If you intend to apply for external funds (e.g., CSC scholarship) and join us, please directly contact me.</span></p>        
     <br>
@@ -64,10 +64,10 @@
         <a href="https://kailaili.github.io/theses" target="_blank">Supervised Bachelor's & Master's Theses</a>
     </span>
     </p>
-    <p style="text-align:justify">I am assitant professor working at the Department of Computer Science at the University of Groningen in the Netherlands. I also collaborate closely with <a href="https://people.isy.liu.se/en/rt/fredrik/">Fredrik Gustafsson</a> at Department of Electrical Engineering of <a href="https://liu.se">Linköping University (LiU) </a>
+    <p style="text-align:justify">I am assitant professor working at the Department of Computer Science at the University of Groningen in the Netherlands. I also collaborate closely with <a href="https://people.isy.liu.se/en/rt/fredrik/" target="_blank">Fredrik Gustafsson</a> at Department of Electrical Engineering of <a href="https://liu.se">Linköping University (LiU) </a>
         in Sweden, where I was a postdoctoral researcher from 2022-10 to 2024-04. Previously, I was a postdoctoral researcher at the <a href="https://isas.iar.kit.edu">Intelligent Sensor-Actuator-Systems (ISAS) Lab</a>, Institute for Anthropomatics and Robotics,
-        <a href="https://kit.edu">Karlsruhe Institute of Technology (KIT)</a> in Germany, where I obtained my PhD degree in computer science in 2021 under the supervision of <a href="https://isas.iar.kit.edu/Staff_Hanebeck.php">Uwe D. Hanebeck</a>. I received my master's degree in Automation Engineering in 2017 from <a href="https://www.rwth-aachen.de">RWTH Aachen University</a> in Germany, including a master's thesis completed at <a href="https://eth.ch"> ETH Zurich </a> in Switzerland,
-        and my bachelor's degrees in 2014 from <a href="https://www.tsinghua.edu.cn/en"> Tsinghua University</a> (<a href="https://en.wikipedia.org/wiki/Tsinghua_University">Wikipedia</a>) in China.</p>
+        <a href="https://kit.edu" target="_blank">Karlsruhe Institute of Technology (KIT)</a> in Germany, where I obtained my PhD degree in computer science in 2021 under the supervision of Uwe D. Hanebeck. I received my master's degree in Automation Engineering in 2017 from <a href="https://www.rwth-aachen.de" target="_blank">RWTH Aachen University</a> in Germany, including a master's thesis completed at <a href="https://eth.ch" target="_blank"> ETH Zurich </a> in Switzerland,
+        and my bachelor's degrees in 2014 from <a href="https://www.tsinghua.edu.cn/en" target="_blank"> Tsinghua University</a> (<a href="https://en.wikipedia.org/wiki/Tsinghua_University" target="_blank">Wikipedia</a>) in China.</p>
 
     <p style="text-align:justify">
         My major research interests lie in agile sensing and trustworthy inference in the general domain of understanding physical and cyber-physical systems, with applications to sensor fusion, robotic perception, and learning dynamical systems. I am also interested in developing planning and control methods for uncertain dynamical systems and have the ambition to methodologically unify these aspects through new representations and models with real-world validation. I had the honor to lead the developments of a few open-source real-world robotic systems, including <a href="https://github.com/KIT-ISAS/lili-om">LiLi-OM</a>, a cross-hardware LiDAR-inertial odometry and mapping system,
