--- a/projects/index.html
+++ b/projects/index.html
@@ -28,7 +28,7 @@
     <li>
         <strong>Computational Agile Sensing and Inference for Intelligent Systems</strong><br>
         Funded  within the ZENITH Program by Linköping University, Sweden <a href="https://zenith.lith.liu.se/projects/">[link]</a> <br>
-        Acquired amount: 600,000 SEK/year for 5 years. Project duration: 2024-2028. 
+        Acquired amount: 600,000 SEK/year for 5 years. Project duration: 2024-2028. <br>
         <em>Role: Principal investigator (PI) and author of the proposal </em> <span style="color:darkviolet;font-weight:bold;">Discontinued due to relocation of Kailai Li</span>
     </li>
     <p class="" style="margin: 5px;"></p>
