--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
     <h3 id="award"> Awards </h3>
         <ul>
             <li> 2023: Best Student Paper Finalist at the 31st European Signal Processing Conference, EUSIPCO 2023 <a href="http://eusipco2023.org/best_student_paper_contest.html">[link]</a> </li>
-            <li> 2022: Jean-Pierre Le Cadre Best Paper Award: First Runner-Up by the International Society for Information Fusion (ISIF) at FUSION 2022 <a href="https://isas.iar.kit.edu/pdf/award/FUSION2022_BEST_PAPER_AWARD_FIRST_RUNNER_UP.pdf">[link]</a> </li>
+            <li> 2022: Jean-Pierre Le Cadre Best Paper Award: First Runner-Up by the International Society for Information Fusion (ISIF) at FUSION 2022 <a href="materials/FUSION2022_BEST_PAPER_AWARD_FIRST_RUNNER_UP.pdf">[link]</a> </li>
             <p class="" style="margin: 2px;"></p>
-            <li> 2021: Best Lab Practical Course “Machine Learning and Intelligent System” by the Department of Informatics, Karlsruhe Institute of Technology <a href="https://isas.iar.kit.edu/pdf/award/Auszeichnung_bestes_Praktikum_SS21.pdf">[link]</a></li>
+            <li> 2021: Best Lab Practical Course “Machine Learning and Intelligent System” by the Department of Informatics, Karlsruhe Institute of Technology <a href="materials/Auszeichnung_bestes_Praktikum_SS21.pdf">[link]</a></li>
             <p class="" style="margin: 2px;"></p>
             <li> 2016 & 2017: IDEA League Research Grant <a href="https://idealeague.org/">[link]</a></li>
             <p class="" style="margin: 2px;"></p>
