--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </li>
         <p class=""style="margin:5px;"></p>
         <li>
-            <strong>WMCS042-05: Intelligent Mobile Perception in Practice </strong> (Semester 1B & 2B, from academic year 2024-2025)<br>
+            <strong>WMCS042-05: Intelligent Mobile Perception in Practice </strong> (Semester 1B, from academic year 2024-2025)<br>
             Master’s course in Computer Science, University of Groningen
              <a href="https://ocasys.rug.nl/2024-2025/catalog/course/WMCS042-05" target="_blank">[link]</a><br>
             <em>Course coordinator, examiner and lecturer</em> <span style="color:darkviolet;font-weight:bold;"> (new course) </span>
